tests/script_runtime_errors/assign_reserved/error.txt
Error: 
    1 | let group.snot = event;
      |     ^^^^^^^^^^^^^^^^^^ Can't assign to a constant expression